Revision history for Net::DNS                                     -*-text-*-
=============================



*** 0.49_01    (Version 0.50 release candidate 1)


Feature: IPv6 transport support
     
     IPv6 transport has been added to the resolver and to the
     nameserver code.
 
     To use IPv6 please make sure that you have IO::Socket::INET6 version
     2.01 or later installed.


Feature: Binary characters in labels

     RFC 1035 3.1:
     
       Domain names in messages are expressed in terms of a sequence of
       labels.  Each label is represented as a one octet length field
       followed by that number of octets.  Since every domain name ends
       with the null label of the root, a domain name is terminated by a
       length byte of zero.  The high order two bits of every length octet
       must be zero, and the remaining six bits of the length field limit
       the label to 63 octets or less.
     
     Unfortunatelly dname attributes are stored strings throughout
     Net::DNS.  (With hindsight dnames should have had their own class
     in which one could have preserved the wire format.).
     
     To be able to represent all octets that are allowed in domain
     names I took the approach to use the "presentation format" for
     the attributes. This presentation format is defined in RFC 1035
     5.1.
     
     I added code to parse presentation format domain names that has
     escpaped data such as \ddd and \X (where X is not a number) to
     wireformat and vice verse. In the conversion from wire format to
     presentation format the characters that have special meaning in a
     zone file are escaped (so that they can be cut-n-pasted without
     pain).
     
     These are " (0x22), $ (0x24), (0x28), ) (0x29), . (0x2e) , ;
     (0x3b), @ (ox40) and \ (0x5c). The number between brackets
     representing the ascii code in hex.
     
     Note that wherever a name occurs as a string in Net::DNS it is