@@ -6,6 +6,12 @@ Revision history for Net::DNS                                     -*-text-*-
 *** 0.49_01    (Version 0.50 release candidate 1)
 
 
+Feature: Calling the Net::DNS::Resolver::dnssec method with a non-zero
+         argument will set the udppacketsize to 2048. The method will
+         also carp a warning if you pass a non-zero argument while
+         Net::DNS::SEC is not installed.
+
+
 Feature: IPv6 transport support
      
      IPv6 transport has been added to the resolver and to the
